--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -11,13 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
+        android:gravity="right"
         android:textSize="30dp"
         android:text="@string/result_text"/>
     <TextView
         android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:gravity="right"
+        android:textSize="40dp"
         android:layout_weight="0"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -160,14 +162,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/button_res"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_gravity="center_vertical|end"
             android:text="@string/_res"
+            android:textSize="@dimen/button_text_size" />
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_C"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:background="@color/teal_700"
+            android:text="@string/c"
             android:textSize="@dimen/button_text_size" />
 
 
