--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/AppThemeLight">
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,14 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="right"
-        android:textSize="30dp"
+        android:textSize="@dimen/result_text_size"
         android:text="@string/result_text"/>
     <TextView
         android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:textSize="40dp"
+        android:textSize="@dimen/result_text_size"
         android:layout_weight="0"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +29,7 @@
 
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -36,7 +37,7 @@
             android:text="@string/_1"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -44,14 +45,14 @@
             android:text="@string/_2"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_3"
             android:textSize="@dimen/button_text_size" />
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_div"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -64,7 +65,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -72,7 +73,7 @@
             android:text="@string/_4"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,14 +81,14 @@
             android:text="@string/_5"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_6"
             android:textSize="@dimen/button_text_size" />
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_mult"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -100,7 +101,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -108,7 +109,7 @@
             android:text="@string/_7"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -116,14 +117,14 @@
             android:text="@string/_8"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_9"
             android:textSize="@dimen/button_text_size" />
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_differ"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -136,7 +137,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_0"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -144,14 +145,14 @@
             android:text="@string/_0"
             android:textSize="@dimen/button_text_size" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_point"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_point"
             android:textSize="@dimen/button_text_size" />
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_sum"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -164,7 +165,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_res"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -179,7 +180,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_C"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
