--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -3,7 +3,23 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/AppThemeLight">
+   >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/button_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:src="@android:drawable/ic_dialog_dialer"
+            android:text="@string/settings"
+            android:textSize="@dimen/button_text_size" />
+
+
+    </LinearLayout>
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
